[project]
name = "ai-multi-pdf-context-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Julian David Ortega Solarte",email = "95juliandos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "ai_multi_pdf_context_chat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
